src/test/ui/no-link-unknown-crate.rs
#[no_link]
extern crate doesnt_exist; //~ ERROR can't find crate

fn main() {}
